roles/general/files/etc/iptables/rules.v4
# Generated by iptables-save v1.6.1 on Sat Apr 21 18:06:30 2018
*mangle
:PREROUTING ACCEPT [1193469:985720895]
:INPUT ACCEPT [992508:771113502]
:FORWARD ACCEPT [200500:214518890]
:OUTPUT ACCEPT [723409:148184802]
:POSTROUTING ACCEPT [923541:362677244]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Sat Apr 21 18:06:30 2018
# Generated by iptables-save v1.6.1 on Sat Apr 21 18:06:30 2018
*nat
:PREROUTING ACCEPT [7386:1308813]
:INPUT ACCEPT [3669:744237]
:OUTPUT ACCEPT [124193:7757363]
:POSTROUTING ACCEPT [124193:7757363]
-A POSTROUTING -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
COMMIT
# Completed on Sat Apr 21 18:06:30 2018
# Generated by iptables-save v1.6.1 on Sat Apr 21 18:06:30 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [14657:14169510]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
# -A INPUT -s 127.0.0.1/32 -i lo -p udp -m udp --dport 53 -j ACCEPT
# -A INPUT -s 127.0.0.53/32 -i lo -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p udp -m udp --dport 68 -j ACCEPT
-A INPUT -p udp -m udp --dport 51413 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 51413 -j ACCEPT
-A INPUT -d 192.168.122.1/32 -i virbr0 -p tcp -m tcp --dport 9050 -j ACCEPT
# -A INPUT -d 127.0.0.1 -i lo -p tcp -m tcp --dport 9050 -j ACCEPT
-A INPUT -j LOG --log-prefix=REJECTED_INPUT: -m limit --limit 1/min
-A INPUT -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -j LOG --log-prefix=REJECTED_FORWARD: -m limit --limit 1/min
-A FORWARD -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Sat Apr 21 18:06:30 2018
